feat: 동문회 허용 공지 게시판 구독 및 알림 기능 개선 (#907)
* feat: 관리자 공지 게시판 생성 시 isAlumni 반영 및 일반 게시판 신청, 관리자 게시판 생성 로직 분리

- 관리자 공지 게시판 생성 시 isAlumni 값 전달 및 반영
- 게시판 신청과 게시판 생성 로직을 서비스단에서 분리
- 일반 게시판과 공지 게시판 엔티티 생성자 분리

* refac: DTO 변환, null 체크 중복 제거

* refac: BoardApply 관련 DTO 이름에서 불필요한 Normal 접두사 제거

* feat: 동문회 허용 공지 게시판 구독 생성 및 이벤트 처리 추가

- 게시판 생성 시, 해당 게시판 접근 권한이 있는 인증 사용자만 구독 생성
- 이벤트 기반으로 새로 인증된 사용자의 공지 게시판 구독 생성
- 이벤트 기반으로 졸업생이 된 사용자의 동문회 비허용 게시판 구독 취소
- 새로 인증된 사용자의 동문수첩 기본 프로필 생성 로직을 이벤트 기반으로 변경

* feat: 졸업생이 동문회 허용 게시판에 대해서만 알림을 받도록 필터링

* fix: 구독 게시판 id null 오류 수정 및 관련 코드 일부 리팩토링

* fix: 공지 게시판 카테고리 검증 및 학적 상태 비교 로직 수정 등

* test: 공지 게시판, 구독 생성 테스트 추가

* feat: 졸업시 게시판 구독 삭제 및 enum 비교문 수정

* chore: 이벤트 리스너 트랜잭션 설정 변경 및 주석 추가

* feat: 경조사 알림 기본 설정 이벤트 기반으로 변경 및 일부 로직 수정

* fix: 엔티티 필드명 카멜 케이스로 변경